<resources>
    <string name="app_name">My Android App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="AboutHyperlink"><a href="https://www.themoviedb.org/about">About</a></string>
    <string name="privacyHyperlink"><a href="https://www.themoviedb.org/documentation/api/terms-of-use">Terms Of Use</a></string>
    <string name="CustomerCareHyperlink"><a href="https://help.imdb.com/contact">Contact Us</a></string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="welcome_to_nowshowing">Welcome to NowShowing</string>
    <string name="user_name">User Name*</string>
    <string name="password">Password*</string>
    <string name="sign_in">SIGN IN</string>
    <string name="reset">RESET</string>
    <string name="new_user_sign_up_here">New User ? Sign Up Here!</string>
    <string name="registration_form">REGISTRATION FORM</string>
    <string name="name">Name*</string>
    <string name="city">City*</string>
    <string name="email">Email*</string>
    <string name="register">REGISTER</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>

</resources>
