<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.naveed.myandroidapp.view.ui.fragment.SettingsFragment">

    <LinearLayout
        android:id="@+id/setting_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/AboutHyperlink"
            android:autoLink="web"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/privacy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/privacyHyperlink"
            android:autoLink="web"
            android:linksClickable="true"/>

        <TextView
            android:id="@+id/customer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:padding="10dp"
            android:text="@string/CustomerCareHyperlink"
            android:autoLink="web"
            android:linksClickable="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>